# mediajanitor

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHIVED_PRD.md  ARCHIVED_PROGRESS.txt  CLAUDE.md  LICENSE  OpenSource_todo.md  PRD.md  README.md  Ralph.md  SUGGESTIONS.md  Taskfile.yaml  afk-ralph.sh  docker-compose.yml  manual_qa.md  manual_todo.md  original_script.py  prd.json  progress.txt  prompt.md  ralph-once.sh  ralph.py
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260114_100737_782c8928d5cd_initial_schema.py  20260114_162744_e7fd5345bfb3_add_analysis_preferences_to_user_.py  (+23 more)
backend/app/: celery_app.py  config.py  database.py  main.py  tasks.py
backend/app/models/: __init__.py  content.py  (+4 more)
backend/tests/: conftest.py  test_auth.py  test_celery.py  test_content.py  test_content_cache_service.py  test_delete_content.py  test_email.py  test_episode_grouping.py  test_hello.py  test_integration.py  test_jellyfin_scan_polling.py  test_jellyfin_service.py  test_jellyseerr_library_sync.py  test_jellyseerr_service.py  test_jellyseerr_sync_polling.py  test_large_movies_validation.py  test_library.py  test_library_refresh.py  test_library_refresh_integration.py  test_main.py  test_nickname_prefill.py  test_nicknames_service.py  test_password_reset.py  test_radarr_service.py  test_rate_limit.py  test_retry.py  test_settings.py  test_slack.py  test_sonarr_service.py  test_sync.py  test_sync_mocked_integration.py  test_tasks.py  test_ultra_service.py  test_whitelist_expired_rewhitelist.py
(+162 files in other folders)
